<resources>
    <string name="app_name">Movie Hut</string>
    <string name="register_movie_button">Register Movie</string>
    <string name="display_movies_button">Display Movies</string>
    <string name="favourites_button">Favourites</string>
    <string name="edit_movies">Edit Movies</string>
    <string name="search_button">Search</string>
    <string name="ratings_button">Ratings</string>
    <string name="title_of_the_movie_hint">Title of the movie</string>
    <string name="name_of_the_director_hint">Name of the Director</string>
    <string name="name_of_actors_actresses_hint">Name of actors/actresses</string>
    <string name="rating_hint">Enter Rating (1–10)</string>
    <string name="review_hint">Review</string>
    <string name="year_hint">Enter Year (>1895)</string>
    <string name="register_movie_title">Register movie</string>
    <string name="Save_Button">Save</string>
    <string name="display_movie">DISPLAY MOVIE</string>
    <string name="favourite_movie_title">TextView</string>
    <string name="edit_movie_title">Edit Movie</string>
    <string name="rate_movie_title">Rate Movie</string>
    <string name="find_movie">Find movie</string>
    <string name="image">TODO</string>
    <string name="title_of_the_movie">Title of the movie :</string>
    <string name="director">Director :</string>
    <string name="actor_actress">Actor / Actress :</string>
    <string name="ratings">Ratings :</string>
    <string name="reviews">Reviews :</string>
    <string name="year">Year :</string>
    <string name="display_movies">Display Movies</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="favourite_movies">Favourite Movies</string>
    <string name="update">Update</string>
    <string name="favourite">Favourite :</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="search_movie">Search Movie</string>
</resources>