<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background13"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="392dp"
        android:layout_height="145dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/register_movie_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo9" />

    <Button
        android:id="@+id/register_movie_button"
        android:layout_width="245dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#DC0E130C"
        android:onClick="launchRegisterMovieActivity"
        android:text="@string/register_movie_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="35dp"
        app:icon="@drawable/movie"
        app:iconSize="35dp"
        app:iconTint="#D88BB3C5"
        app:layout_constraintBottom_toTopOf="@+id/display_movie_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/display_movie_button"
        android:layout_width="245dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#000000"
        android:onClick="launchDisplayMovieActivity"
        android:text="@string/display_movies_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="35dp"
        app:icon="@drawable/cinema"
        app:iconSize="35dp"
        app:iconTint="#D88BB3C5"
        app:layout_constraintBottom_toTopOf="@+id/favourites_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/favourites_button"
        android:layout_width="245dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#060A0C"
        android:onClick="launchFavoriteMovieActivity"
        android:text="@string/favourites_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="35dp"
        app:icon="@drawable/favorite"
        app:iconSize="36dp"
        app:iconTint="#D88BB3C5"
        app:layout_constraintBottom_toTopOf="@+id/edit_movie_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/edit_movie_button"
        android:layout_width="245dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#07090B"
        android:onClick="launchEditMovieActivity"
        android:text="@string/edit_movies"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="35dp"
        app:icon="@drawable/edit"
        app:iconSize="35dp"
        app:iconTint="#D88BB3C5"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="245dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#040709"
        android:onClick="launchSearchMovieActivity"
        android:text="@string/search_button"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="35dp"
        app:icon="@drawable/magnifier"
        app:iconSize="35dp"
        app:iconTint="#D88BB3C5"
        app:layout_constraintBottom_toTopOf="@+id/rating_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rating_button"
        android:layout_width="245dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#0A181E"
        android:onClick="launchRatingMovieActivity"
        android:text="@string/ratings_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="35dp"
        app:icon="@drawable/star"
        app:iconSize="35dp"
        app:iconTint="#D88BB3C5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>